--- a/booktracker/src/main/resources/application.properties
+++ b/booktracker/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Booktracker
+
+# H2 database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
